--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,5 +8,10 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 enable_testing()
 
+add_executable(
+    main
+    main.cpp
+)
+
 add_subdirectory(src)
-add_subdirectory(tests)
+# add_subdirectory(tests)
